// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-badge should render with _label="**Te**xt" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <kol-span-wc _allowmarkdown="" _label="**Te**xt"></kol-span-wc>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Badge fallback" _smartButton={"_ariaDescription":"Badge label","_label":"Remove"} 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span class="smart-button" style="background-color: #000; color: #959595;">
      <kol-span-wc _allowmarkdown="" _label="Badge fallback" id="nonce"></kol-span-wc>
      <kol-button-wc _ariacontrols="nonce" _ariadescription="Badge label" _hidelabel="" _label="Remove"></kol-button-wc>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _color="#000000" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <kol-span-wc _allowmarkdown="" _label="Text"></kol-span-wc>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" _color="#000000" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <kol-span-wc _allowmarkdown="" _icons="codicon codicon-home" _label="Text"></kol-span-wc>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <kol-span-wc _allowmarkdown="" _icons="codicon codicon-home" _label="Text"></kol-span-wc>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <kol-span-wc _allowmarkdown="" _label="Text"></kol-span-wc>
    </span>
  </template>
</kol-badge>
`;
